[package]
name = "parse_node_info"
version = "0.1.0"
edition = "2021"
default-run = "parse_node_info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
regex = "1.10.2"
walkdir = "2.4.0"
serde_yaml = "0.9.25"
serde = { version = "1.0.189", features = ["derive"] }
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.1"
strsim = "0.10.0"